--- a/views/admin/layout/sidenav.ejs
+++ b/views/admin/layout/sidenav.ejs
@@ -106,6 +106,14 @@
           <span class="menu-title">Offers</span>
         </a>
       </li>
+      <li class="nav-item menu-items">
+        <a class="nav-link" href="/admin/coupons">
+          <span class="menu-icon">
+            <i class="mdi mdi-file-document-box"></i>
+          </span>
+          <span class="menu-title">Coupons</span>
+        </a>
+      </li>
       <!-- <li class="nav-item menu-items">
         <a class="nav-link" data-toggle="collapse" href="#auth" aria-expanded="false" aria-controls="auth">
           <span class="menu-icon">
