--- a/views/admin/coupon.ejs
+++ b/views/admin/coupon.ejs
@@ -6,34 +6,34 @@
         <%- include('./layout/topnav.ejs') %>
         <div class="w-100 container-fluid bg-dark mt-5">
             <div class="container mt-5">
-                <h2>Offer Management</h2>
-                <% if (offers.length === 0) { %>
-                    <span style="font-size:x-large">No Offers</span>
+                <h2>Coupon Management</h2>
+                <% if (coupons.length === 0) { %>
+                    <span style="font-size:x-large">No Coupons</span>
                 <% } else { %>
                     <table class="table">
                         <thead>
                             <tr>
                                 <th>#</th>
-                                <th>Offer Name</th>
+                                <th>Coupon Name</th>
+                                <th>Coupon Code</th>
                                 <th>Discount Persentage</th>
-                                <th>Starting Date</th>
+                                <th>Minimum Amount</th>
                                 <th>expiry Date</th>
-                                <!-- <th>Status</th> -->
                                 <th>Action</th>
                             </tr>
                         </thead>
                         <tbody>
-                            <% offers.forEach((offer, index) => { %>
+                            <% coupons.forEach((coupon, index) => { %>
                                 <tr>
                                     <td><%= index + 1 %></td>
-                                    <td><%= offer.name %></td>
-                                    <td><%= offer.discount %></td>
-                                    <td><%= new Date(offer.startingDate).toLocaleDateString('en-US', { weekday: 'short', year: 'numeric', month: 'short', day: 'numeric' }) %></td>
-                                    <td><%= new Date(offer.expiryDate).toLocaleDateString('en-US', { weekday: 'short', year: 'numeric', month: 'short', day: 'numeric' }) %></td>
-                                    <!-- <td class="<%= offer.status === true ? 'text-success' : 'text-danger' %>"><%= offer.status %></td> -->
+                                    <td><%= coupon.couponName %></td>
+                                    <td><%= coupon.couponCode %></td>
+                                    <td><%= coupon.discountPercent %></td>
+                                    <td><%= coupon.minAmount %></td>
+                                    <td><%= new Date(coupon.expiryDate).toLocaleDateString('en-US', { weekday: 'short', year: 'numeric', month: 'short', day: 'numeric' }) %></td>
                                     <td>
-                                        <button class="btn btn-primary"><a style="color: white; text-decoration: none;" href="/admin/offers/edit/<%= offer._id %>">Edit</a></button>
-                                        <button type="button" class="btn btn-danger"  onclick="deleteOffer('<%= offer._id %>')"> Delete</button>
+                                        <button class="btn btn-primary"><a style="color: white; text-decoration: none;" href="/admin/coupons/edit/<%= coupon._id %>">Edit</a></button>
+                                        <button type="button" class="btn btn-danger"  onclick="deleteCoupon('<%= coupon._id %>')"> Delete</button>
                                     </td>
                                 </tr>
                             <% }); %>
@@ -43,7 +43,7 @@
             </div>
 
             <div class="container mt-3">
-                <a href="/admin/offers/add" class="btn btn-outline-danger">Add New Offers</a>
+                <a href="/admin/coupons/add" class="btn btn-outline-danger">Add New Coupon</a>
             </div>
         </div>
     </div>
@@ -60,11 +60,11 @@
 </footer>
 
 <script>
-    function deleteOffer(offerId) {
+    function deleteCoupon(couponId) {
 
     Swal.fire({
         title: 'Confirmation',
-        text: 'Are you sure you want to Delete this Offer?',
+        text: 'Are you sure you want to Delete this Coupon?',
         icon: 'warning',
         showCancelButton: true,
         confirmButtonColor: '#3085d6',
@@ -72,14 +72,14 @@
         confirmButtonText: 'Yes'
     }).then((result) => {
         if(result.isConfirmed) {
-            fetch(`/admin/offers/delete/${offerId}`, {
+            fetch(`/admin/coupons/delete/${couponId}`, {
                 method: 'POST'
             })
             .then(response => {
                 if(response.ok) {
                     Swal.fire(
                         'Success!',
-                        'Offer is deleted successfully',
+                        'Coupon is deleted successfully',
                         'success'
                     ).then(() => {
                         window.location.reload();    // Refresh the page
