--- a/views/users/login.ejs
+++ b/views/users/login.ejs
@@ -183,13 +183,13 @@
                    
                     <div class="form-group">
                         <label for="singin-email">Username or Email address *</label>
-                        <input type="text" class="form-control" id="singin-email" name="email"  required>
+                        <input type="text" class="form-control" id="singin-email" name="email"  required value="snehavijayan666@gmail.com">
                         <small id="emailError" class="text-danger"></small>
                     </div><!-- End .form-group -->
     
                     <div class="form-group">
                         <label for="singin-password">Password *</label>
-                        <input type="password" class="form-control" id="singin-password" name="password"  required>
+                        <input type="password" class="form-control" id="singin-password" name="password"  required value="Sneha@123">
                         <small id="passwordError" class="text-danger"></small>
                     </div><!-- End .form-group -->
                     <% 
