--- a/views/users/otp.ejs
+++ b/views/users/otp.ejs
@@ -21,7 +21,7 @@
                         <a href="#">Links</a>
                         <ul>
                             <li><a href="tel:#"><i class="icon-phone"></i>Call: +91 9778073408</a></li>
-                            <li><a href=""><i class="icon-heart-o"></i>My Wishlist</a></li>
+                            <li><a href="/wishlist"><i class="icon-heart-o"></i>My Wishlist</a></li>
                             <li><a href="/about">About Us</a></li>
                             <li><a href="">Contact Us</a></li>
                             <li><a href="/login"><i class="icon-user"></i>Login</a></li>
