--- a/views/users/allproducts.ejs
+++ b/views/users/allproducts.ejs
@@ -38,17 +38,18 @@
                         <div class="toolbox-right">
                             <div class="toolbox-sort">
                                 <label for="sortby">Sort by:</label>
-                                <div class="select-custom">
-                                    <select name="sortby" id="sortby" class="form-control">
-                                        <option value="price_asc" selected="selected">Price: low to high</option>
-                                        <option value="price_desc">Price: high to low</option>
-                                        <option value="az">aA - zZ</option>
-                                        <option value="za">zZ - aA</option>
-
-                                    </select>
+                                <div class="dropdown">
+                                    <button class="btn btn-light dropdown-toggle" type="button" id="dropdownMenuButton" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
+                                        sortby
+                                    </button>
+                                    <div class="dropdown-menu dropdown-menu-right dropdown-menu-lg" aria-labelledby="dropdownMenuButton" style="min-width: 150px; padding: 08px;">
+                                        <p><a class="dropdown-item " href="/all-products/?s=price_asc">Price: low to high</a></p>
+                                        <p><a class="dropdown-item "  href="/all-products/?s=price_desc">Price: high to low</a></p>
+                                        <p><a class="dropdown-item " href="/all-products/?s=az">Name: A - Z</a></p>
+                                        <p><a class="dropdown-item " href="/all-products/?s=za">Name: Z - A</a></p>
+                                    </div>
                                 </div>
                             </div><!-- End .toolbox-sort -->
-                           
                         </div><!-- End .toolbox-right -->
                     </div><!-- End .toolbox -->
 
@@ -208,7 +209,9 @@
             }
         });
     });
+
 </script>
+
 
   
 
